--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <ul class="navbar-list">
-    <li><a href="../index.html">Accueil</a></li>
-    <li><a href="../pages/projects.html">Mes Projets</a></li>
-    <li><a href="../pages/about.html">À propos</a></li>
-    <li><a href="../pages/contact.html">Contact</a></li>
+    <li><a href="/Portfolio/index.html">Accueil</a></li>
+    <li><a href="/Portfolio/pages/projects.html">Mes Projets</a></li>
+    <li><a href="/Portfolio/pages/about.html">À propos</a></li>
+    <li><a href="/Portfolio/pages/contact.html">Contact</a></li>
   </ul>
 </nav>
