--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,14 +1,14 @@
 <nav class="navbar">
   <ul class="navbar-list">
     <!-- Release Github Pages -->
-    <!-- <li><a href="/Portfolio/index.html">Accueil</a></li>
+    <li><a href="/Portfolio/index.html">Accueil</a></li>
     <li><a href="/Portfolio/pages/projects.html">Mes Projets</a></li>
     <li><a href="/Portfolio/pages/about.html">À propos</a></li>
-    <li><a href="/Portfolio/pages/contact.html">Contact</a></li> -->
+    <li><a href="/Portfolio/pages/contact.html">Contact</a></li>
     <!-- Live Server local test -->
-    <li><a href="../index.html">Accueil</a></li>
+    <!-- <li><a href="../index.html">Accueil</a></li>
     <li><a href="../pages/projects.html">Mes Projets</a></li>
     <li><a href="../pages/about.html">À propos</a></li>
-    <li><a href="../pages/contact.html">Contact</a></li>
+    <li><a href="../pages/contact.html">Contact</a></li> -->
   </ul>
 </nav>
