--- a/css/projects.css
+++ b/css/projects.css
@@ -135,13 +135,33 @@ h2 {
 }
 
 .gif-frame {
-  height: 160px;
-  overflow: hidden;
   margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
 }
 
 .gif-frame img {
   width: 355px;
   height: auto;
-  transform: translateY(-20px);
+  margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .gif-frame {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gif-frame img {
+    width: 100%;
+    max-width: 355px;
+    margin-bottom: 15px;
+  }
+
+  .gif-frame img:last-child {
+    margin-bottom: 0;
+  }
 }
