[FIX] - Navbar Icon
Now show the Navbar icon on the Landing Page

--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,19 +1,19 @@
 <nav class="navbar">
   <button class="hamburger" aria-label="Toggle navigation">
-    <img src="../assets/navbar/navbar-icon.png" alt="navbar-icon" />
+    <img src="/assets/navbar/navbar-icon.png" alt="navbar-icon" />
   </button>
   <div class="navbar-menu">
     <ul class="navbar-list">
       <!-- Release Github Pages -->
-      <li><a href="/Portfolio/index.html">Accueil</a></li>
+      <!-- <li><a href="/Portfolio/index.html">Accueil</a></li>
       <li><a href="/Portfolio/pages/projects.html">Mes Projets</a></li>
       <li><a href="/Portfolio/pages/about.html">À propos</a></li>
-      <li><a href="/Portfolio/pages/contact.html">Contact</a></li>
+      <li><a href="/Portfolio/pages/contact.html">Contact</a></li> -->
       <!-- Live Server local test -->
-      <!-- <li><a href="../index.html">Accueil</a></li>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="../pages/projects.html">Mes Projets</a></li>
       <li><a href="../pages/about.html">À propos</a></li>
-      <li><a href="../pages/contact.html">Contact</a></li> -->
+      <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
   </div>
 </nav>
