--- a/css/projects.css
+++ b/css/projects.css
@@ -86,7 +86,7 @@ h2 {
 .project-description p {
   font-size: 1rem;
   line-height: 1.6;
-  color: #778da9;
+  color: #b0bec5;
   margin-bottom: 0.5rem;
 }
 
